<resources>
    <string name="app_name">GoAHeadApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register"><![CDATA[<u>Register</u>]]></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_add_address">Map</string>
    <string name="title_activity_driver_main">DriverMainActivity</string>
    <string name="title_activity_main_driver">MainDriverActivity</string>
    <string name="title_activity_main_one">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="the_address">The Address</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="forget_password">forget password</string>
    <string name="login">LogIn</string>
    <string name="new_client">new Client</string>
    <string name="login_as_driver">logIn as driver</string>
    <string name="profile">Profile</string>
    <string name="saved_addresses">saved Addresses</string>
    <string name="notifications">Notifications</string>
    <string name="my_notes">My Notes</string>
    <string name="payment_way">payment way</string>
    <string name="who_we_are">who we are</string>
    <string name="call_us">Call Us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="enter_your_user_name">enter your user name</string>
    <string name="enter_your_phone">enter your phone</string>
    <string name="enter_your_re_password">enter your re_password</string>
    <string name="registers">Register</string>
    <string name="rest_password">Rest Password</string>
    <string name="go_to_app">Go to App</string>
    <string name="change_location">Change Location</string>
    <string name="edit_user_data">edit user data</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>
    <string name="no">NO</string>
    <string name="send">Send</string>
    <string name="write_note">Write Note</string>
    <string name="call">Call</string>
    <string name="defination">Defination</string>
    <string name="order_invoice">: Order invoice</string>
    <string name="any_coupon">any coupon :</string>
    <string name="request">request</string>
    <string name="calcoulate">calcoulate</string>
    <string name="message">Message</string>
    <string name="you_can_contact_us_through_the_following_methods">You can contact us through the following methods:</string>
    <string name="or_by_sending_a_message">Or by sending a message</string>
    <string name="look">Look</string>
    <string name="shopping">Shopping</string>
    <string name="online_shopping">Online Shopping</string>
    <string name="travel_and_tourism">Travel and Tourism</string>
    <string name="public_services">Public Services</string>
    <string name="learn_courses">Learn Courses</string>
    <string name="sport_and_news">sport and news</string>
    <string name="bonoc">Bonoc</string>
    <string name="super_market">Super Market</string>
    <string name="resturant">Resturant</string>
    <string name="coffee_and_cake">Coffee And Cake</string>
    <string name="pharmacy">pharmacy</string>
    <string name="other">Other</string>
    <string name="my_descrptions">my descrptions</string>
    <string name="search">Search</string>
    <string name="the_application_provides_you_with_a_service_to_search_for_a_restaurant_pharmacy_supermarket_coffee_shops_tourist_offices_and_others_by_specifying_the_name_of_the_place_or_location">The application provides you with a service to search for a restaurant, pharmacy, Supermarket, coffee shops, tourist offices and others By specifying the name of the place or location</string>
    <string name="marketing">Marketing</string>
    <string name="the_application_provides_you_with_a_remote_electronic_shopping_service_as_you_can_see_the_shops_and_restaurants_and_identify_the_desired_products_and_buy_them_easily">The application provides you with a remote electronic shopping service As you can see the shops and restaurants and Identify the desired products and buy them easily</string>
    <string name="skip">skip</string>
    <string name="delivery">Delivery</string>
    <string name="the_application_provides_you_with_home_delivery_service_with_the_ability_to_pay_on_delivery_or_through_electronic_cards">The application provides you with home delivery service with the ability to pay on delivery or through electronic cards</string>
    <string name="contact_data">Contact Data</string>
    <string name="payment_way_selected">Payment way selected</string>
    <string name="address_data">Address Data</string>
    <string name="resent">Resent</string>
    <string name="older">older</string>
    <string name="the_order_has_been_delivered">The order has been delivered</string>
    <string name="canceled">Canceled</string>
    <string name="cvv">CVV</string>
    <string name="end_date">End date</string>
    <string name="total_price">Total Price</string>
    <string name="save">Save</string>
    <string name="cart_details">Cart Details</string>
    <string name="rate_now">Rate Now</string>
    <string name="social_media_account">Social Media Account</string>
    <string name="or">OR</string>
    <string name="share_app_link">Share App Link</string>
    <string name="send_note">send note</string>
    <string name="rate_on">rate on</string>
    <string name="orders">Orders</string>
    <string name="favorite">Favorite</string>
    <string name="next">Start Now</string>
    <string name="home">Home</string>
    <string name="device">device</string>
    <string name="ask_now">Ask Now</string>
    <string name="available_payment_upon_receipt">available payment upon receipt</string>
    <string name="electronic_payment_cards">Electronic payment cards</string>
    <string name="sure_payment_now">sure payment now</string>
    <string name="ask_driver_done">The driver has been requested successfully
Awaiting approval</string>
    <string name="rate">Rate</string>
    <string name="order_number">Order Number</string>
    <string name="bill_price">Bill Price</string>
    <string name="ask">ask</string>
    <string name="add">add</string>
    <string name="brows_now">Brows Now</string>
    <string name="delivery_fee_details">Delivery fee details</string>
    <string name="s_r">SR</string>
    <string name="complete">Complete</string>
    <string name="final_price">final price</string>
    <string name="cost_delivery">delivery fee For Place</string>
    <string name="cost_delivery_out">(outSide)</string>
    <string name="welcome">Welcome</string>
    <string name="copy">copy app link</string>
    <string name="coped">coped to clipboard</string>
    <string name="distance">distance</string>
    <string name="closest">closest</string>
    <string name="furthest">furthest</string>
    <string name="date_added">Date added</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="rating">Rating</string>
    <string name="filter">Filter</string>

    <string name="camera">camera</string>
    <string name="select_photo">select_photo</string>
    <string name="select_photoq">select photo from</string>
    <string name="v_s">v.s</string>
    <string name="add_name_city_or_product">add name city or product</string>
    <string name="enter_your_card">enter card number</string>
    <string name="enter_your_name">enter Cardholder\'s name</string>
    <string name="mm">MM</string>
    <string name="year">Year</string>
    <string name="uprofile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="pay_meth">Electronic payment gates</string>
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="pp">Privacy policy</string>
    <string name="share">Share App</string>
    <string name="fav">Favorite</string>
    <string name="my_orders">Orders</string>
    <string name="reste">Rate</string>
    <string name="cart">Cart</string>
    <string name="ch_driver">Choose Driver</string>

    <string-array name="lang">
        <item>Languages</item>
        <item>Arabic</item>
        <item>English</item>
    </string-array>
</resources>