<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/savedAddress"
            android:icon="@drawable/ic_place"
            android:title="@string/saved_addresses" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:iconTint="@color/colorAccent"
            android:title="@string/notifications" />

        <item
            android:id="@+id/notes"
            android:icon="@drawable/ic_note_24px"
            android:title="@string/my_notes" />
        <item
            android:id="@+id/paymentMethod"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/payment_way" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_24px"
            android:title="@string/who_we_are" />

        <item
            android:id="@+id/call"
            android:icon="@drawable/ic_contacts_24px"
            android:title="@string/call_us" />
        <item
            android:id="@+id/policy"
            android:icon="@drawable/ic_security_24px"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share_24px"
            android:title="@string/share_app" />

        <item
            android:id="@+id/rate"
            android:icon="@drawable/ic_grade_24px"
            android:title="@string/rate_app" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_group_53"
            android:title="@string/logout" />


    </group>
</menu>