<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/shape_search_edittext"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/payment_way_selected"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/upon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_payment_upon_receipt"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electronic_payment_cards"
            android:textSize="14sp" />
    </RadioGroup>


</LinearLayout>
