<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

<!--    <ImageView-->
<!--        android:id="@+id/text"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_marginEnd="50dp"-->
<!--        android:layout_marginRight="50dp"-->
<!--        android:layout_marginBottom="-16dp"-->
<!--        android:src="@drawable/ic_traingle"/>-->

    <TextView
        android:id="@+id/text"
        android:layout_width="60dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="-26dp"
        android:background="@drawable/shape_triangle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/shadow"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/closest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/closest"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/furthest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/furthest"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date_added"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/add_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/oldest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/oldest"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/latest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/latest"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/payment_way"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/elect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/electronic_payment_cards"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/upon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/available_payment_upon_receipt"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/rating"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                android:gravity="center">

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:numStars="5"
                    android:rating="5" />

            </LinearLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/btn_shap1"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:onClick="Login"
            android:textSize="16dp" />

    </LinearLayout>

</RelativeLayout>