<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="MyViewModel"
            type="com.app.goaheadapp.SplashViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context=".onboarding.onBoarding2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/skip"
            android:onClick="@{()->MyViewModel.toLoginActivity()}"
            android:textColor="#11267F"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/shadow"
            android:src="@drawable/ic_onboarding2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/marketing"
            android:textColor="#11267F"
            android:textStyle="bold"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/the_application_provides_you_with_a_remote_electronic_shopping_service_as_you_can_see_the_shops_and_restaurants_and_identify_the_desired_products_and_buy_them_easily"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>
</layout>
