<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="MyViewModel"
            type="com.app.goaheadapp.SplashViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context=".onboarding.onBoarding1">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/skip"
            android:onClick="@{()->MyViewModel.toLoginActivity()}"
            android:textColor="#11267F"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/shadow"
            android:src="@drawable/ic_onboarding1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="#11267F"
            android:textStyle="bold"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/the_application_provides_you_with_a_service_to_search_for_a_restaurant_pharmacy_supermarket_coffee_shops_tourist_offices_and_others_by_specifying_the_name_of_the_place_or_location"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>
</layout>