<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:text="@string/select_photoq"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_baseline_camera_alt_24"
            android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
            android:drawablePadding="8dp"
            android:text="@string/camera"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_baseline_image_24"
            android:drawableLeft="@drawable/ic_baseline_image_24"
            android:drawablePadding="8dp"
            android:text="@string/select_photo"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>